# movies-rust-bolt

./: .gitignore  Cargo.toml  README.adoc
.github/workflows/: rust.yml
assets/: index.html
src/: main.rs
