[package]
name = "movies-rust-bolt"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.7.4"
color-eyre = "0.6.2"
futures = "0.3.30"
neo4rs = "0.7.1"
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.1", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
